--- a/photo-gallery/flex.html
+++ b/photo-gallery/flex.html
@@ -33,8 +33,8 @@
             display: flex;
             flex: auto;
             overflow: hidden;
-            padding: 10px;
-            margin: 0 10px;
+            padding: 20px;
+            margin: 0 50px;
         }
         img{
             width: 100%;
@@ -44,7 +44,7 @@
         
         img:hover{
             filter: none;
-            transition: 0.3s ease-in;
+            transition: 0.3s ease-in-out;
         }
     </style>
 </head>
@@ -53,24 +53,23 @@
     <p>Transforming moments into arts</p>
     <div class="container">
         <div class="first">
-            <img src="https://images.pexels.com/photos/126271/pexels-photo-126271.jpeg">
-            <img src="https://images.pexels.com/photos/1006121/pexels-photo-1006121.jpeg">
-            <img src="https://images.pexels.com/photos/620337/pexels-photo-620337.jpeg">
-            <img src="https://images.pexels.com/photos/1032650/pexels-photo-1032650.jpeg">
+            <img src="https://images.pexels.com/photos/126271/pexels-photo-126271.jpeg" alt="A path surrounded by trees">
+            <img src="https://images.pexels.com/photos/1006121/pexels-photo-1006121.jpeg" alt="Forest with lots of trees and yellow leaves">
+            <img src="https://images.pexels.com/photos/620337/pexels-photo-620337.jpeg" alt="Scenic view with mountains and river">
+            <img src="https://images.pexels.com/photos/1032650/pexels-photo-1032650.jpeg" alt="Beautiful landscape with a lake">
         </div>
         <div class="first">
-            <img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg">
-            <img src="https://images.pexels.com/photos/1366630/pexels-photo-1366630.jpeg">
-            <img src="https://images.pexels.com/photos/698736/pexels-photo-698736.jpeg">
-            <img src="https://images.pexels.com/photos/457538/pexels-photo-457538.jpeg">
-
+            <img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg" alt="Sunny beach with palm trees">
+            <img src="https://images.pexels.com/photos/1366630/pexels-photo-1366630.jpeg" alt="Sunset over the ocean">
+            <img src="https://images.pexels.com/photos/698736/pexels-photo-698736.jpeg" alt="Colorful hot air balloons in the sky">
+            <img src="https://images.pexels.com/photos/457538/pexels-photo-457538.jpeg" alt="City skyline at night">
         </div>
         <div class="first">
-            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3B4MTI3MTA0MS1pbWFnZS1rd3Z5MGR6by5qcGc.jpg">
-            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3AtNDMzLWx1a2VzdGFja3Bvb2xlLWNvc3ktaHV0LWNhcmQtYS1nLWpvYjU4MC5qcGc.jpg">
-            <img src="https://images.pexels.com/photos/957089/veil-cases-waterfall-autumn-alpine-957089.jpeg">
-            <img src="https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg">
-            <img src="https://images.pexels.com/photos/2310641/pexels-photo-2310641.jpeg">
+            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3B4MTI3MTA0MS1pbWFnZS1rd3Z5MGR6by5qcGc.jpg" alt="Vintage camera on a table">
+            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3AtNDMzLWx1a2VzdGFja3Bvb2xlLWNvc3ktaHV0LWNhcmQtYS1nLWpvYjU4MC5qcGc.jpg" alt="Workspace with computer and notebooks">
+            <img src="https://images.pexels.com/photos/957089/veil-cases-waterfall-autumn-alpine-957089.jpeg" alt="Waterfall in a scenic landscape">
+            <img src="https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg" alt="Colorful abstract art">
+            <img src="https://images.pexels.com/photos/2310641/pexels-photo-2310641.jpeg" alt="Sunset reflecting on the water">
         </div>
     </div>
 </body>
