--- a/photo-gallery/float.html
+++ b/photo-gallery/float.html
@@ -19,19 +19,21 @@
         }
         p {
             padding-bottom: 50px;
+            font-style: italic;
         }
         h1{
             font-family: 'Rubik Doodle Shadow';
             padding-top: 30px;
         }
         .container {
-            overflow: hidden; /* Clear float */
+            margin: 30px;
         }
         
         .first {
             float: left;
             width: 33.33%;
             overflow: hidden;
+            
         }
 
         img {
@@ -39,6 +41,7 @@
             height: auto;
             filter: grayscale(70%);
             transition: filter 0.3s ease-in-out;
+            padding: 3px;
         }
 
         img:hover {
@@ -51,24 +54,22 @@
     <p>Transforming moments into arts</p>
     <div class="container">
         <div class="first">
-            <img src="https://images.pexels.com/photos/126271/pexels-photo-126271.jpeg">
-            <img src="https://images.pexels.com/photos/620337/pexels-photo-620337.jpeg">
-            <img src="https://images.pexels.com/photos/1006121/pexels-photo-1006121.jpeg">
-            <img src="https://images.pexels.com/photos/1032650/pexels-photo-1032650.jpeg">
+            <img src="https://images.pexels.com/photos/126271/pexels-photo-126271.jpeg" alt="A path surrounded by trees">
+            <img src="https://images.pexels.com/photos/620337/pexels-photo-620337.jpeg" alt="Scenic view with mountains and river">
+            <img src="https://images.pexels.com/photos/1006121/pexels-photo-1006121.jpeg" alt="Forest with lots of trees and yellow leaves">
+            <img src="https://images.pexels.com/photos/1032650/pexels-photo-1032650.jpeg" alt="Beautiful landscape with a lake">
         </div>
         <div class="first">
-            <img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg">
-            <img src="https://images.pexels.com/photos/698736/pexels-photo-698736.jpeg">
-            <img src="https://images.pexels.com/photos/457538/pexels-photo-457538.jpeg">
-            <img src="https://images.pexels.com/photos/1366630/pexels-photo-1366630.jpeg">
-
+            <img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg" alt="Sunny beach with palm trees">
+            <img src="https://images.pexels.com/photos/698736/pexels-photo-698736.jpeg" alt="Colorful hot air balloons in the sky">
+            <img src="https://images.pexels.com/photos/457538/pexels-photo-457538.jpeg" alt="City skyline at night">
+            <img src="https://images.pexels.com/photos/1366630/pexels-photo-1366630.jpeg" alt="Sunset over the ocean">
         </div>
         <div class="first">
-            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3B4MTI3MTA0MS1pbWFnZS1rd3Z5MGR6by5qcGc.jpg">
-            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3AtNDMzLWx1a2VzdGFja3Bvb2xlLWNvc3ktaHV0LWNhcmQtYS1nLWpvYjU4MC5qcGc.jpg">
-            <img src="https://images.pexels.com/photos/957089/veil-cases-waterfall-autumn-alpine-957089.jpeg">
-            <img src="https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg">
-
+            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3B4MTI3MTA0MS1pbWFnZS1rd3Z5MGR6by5qcGc.jpg" alt="Vintage camera on a table">
+            <img src="https://images.rawpixel.com/image_500/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3AtNDMzLWx1a2VzdGFja3Bvb2xlLWNvc3ktaHV0LWNhcmQtYS1nLWpvYjU4MC5qcGc.jpg" alt="Workspace with computer and notebooks">
+            <img src="https://images.pexels.com/photos/957089/veil-cases-waterfall-autumn-alpine-957089.jpeg" alt="Waterfall in a scenic landscape">
+            <img src="https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg" alt="Colorful abstract art">
         </div>
     </div>
 </body>
